--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.h2.console.path=/h2-console
 spring.sql.init.mode=always
 spring.sql.init.data-locations=classpath:data.sql
 
+springdoc.api-docs.path=/api-docs
+#http://localhost:8080/swagger-ui/index.html
+
